Closed Bug 327895 Opened 18 years ago Closed 18 years ago

Dynamic XUL templates are broken

Categories

(Core :: XUL, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: alex, Assigned: enndeakin)

References

()

Details

(Keywords: testcase)

Attachments

(2 files)

Dynamic updating of RDF-driven multi rule templates has recently stopped working.
A testcase is at http://www.croczilla.com/~alex/285631/.
When the datasource assertion changes from (a,pred,x) -> (a,pred,y), the second rule should be dynamically matched. 
Instead, in current mozilla builds all generated content disappears.

This is most likely a regression caused by the template rewrite of bug#285631.
Attached file testcase
Attaching testcase
This bug only affects templates that use the containment attribute. In this case, the parent wasn't being set properly.
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attachment #212482 - Flags: review?(bzbarsky)
Keywords: testcase
Attachment #212482 - Flags: review?(bzbarsky) → review+
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Blocks: 285631
No longer depends on: 285631
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.xul → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: