Bug 327895, set value properly when checking containment properties, r=bz